# CPP

./: .env.example  GITHUB_SECRETS_GUIDE.txt  README.md
.github/workflows/: deploy.yml
backend/: serverless.yml
backend/handlers/: documents.py  seed.py
doc/: main.tex
frontend/: index.html
frontend/src/: App.jsx  config.js
frontend/src/components/: DetailModal.jsx  FileUpload.jsx  ProductCard.jsx  WarrantyCard.jsx
frontend/src/pages/: EditWarranty.jsx  Login.jsx  Products.jsx  Register.jsx  ServiceHistory.jsx  Warranties.jsx
frontend/src/services/: api.js
warranty-tracker-lib/: README.md  pyproject.toml
